Adds the HAL QCD potentials for NX from Sasaki

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -157,6 +157,9 @@ target_link_libraries(SigmaSmearingSherlock tidyCATS -L${DREAM_LIB_PATH} DreamFu
 add_executable(XiSmearingSherlock ${PROJECT_SOURCE_DIR}/Scripts/pXiAnalysis/smearingLambdaSidebands.C)
 target_link_libraries(XiSmearingSherlock tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
+add_executable(Sasaki ${PROJECT_SOURCE_DIR}/Scripts/pXiAnalysis/SasakiPotential.C)
+target_link_libraries(Sasaki tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
 add_executable(POnlymT ${PROJECT_SOURCE_DIR}/Scripts/ppAnalysis/POnlymT.C)
 target_link_libraries(POnlymT tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
