--- a/Systematics/CMakeLists.txt
+++ b/Systematics/CMakeLists.txt
@@ -51,6 +51,9 @@ target_link_libraries(ppmTVariations tidyCATS DreamFunctions ForgivingFnct)
 add_executable(pLmTVariations ${PROJECT_SOURCE_DIR}/GetmTVariationspL.C)
 target_link_libraries(pLmTVariations tidyCATS DreamFunctions ForgivingFnct)
 
+add_executable(ppmTVariationsForCoalescence ${PROJECT_SOURCE_DIR}/GetmTVariationsCoalescence.C)
+target_link_libraries(ppmTVariationsForCoalescence tidyCATS DreamFunctions ForgivingFnct)
+
 add_executable(systematicspAp ${PROJECT_SOURCE_DIR}/EvalDreamSyspAp.C)
 target_link_libraries(systematicspAp tidyCATS DreamFunctions ForgivingFnct)
 
