--- a/Systematics/CMakeLists.txt
+++ b/Systematics/CMakeLists.txt
@@ -66,5 +66,14 @@ target_link_libraries(systematicspAL tidyCATS DreamFunctions ForgivingFnct)
 add_executable(pALmTVariations ${PROJECT_SOURCE_DIR}/GetmTVariationspAL.C)
 target_link_libraries(pALmTVariations tidyCATS DreamFunctions ForgivingFnct)
 
+add_executable(pALmTSystematics ${PROJECT_SOURCE_DIR}/GetmTSystematicspAL.C)
+target_link_libraries(pALmTSystematics tidyCATS DreamFunctions ForgivingFnct)
+
+add_executable(pALmTSystematics_Update ${PROJECT_SOURCE_DIR}/GetmTSystematicspAL_Update.C)
+target_link_libraries(pALmTSystematics_Update tidyCATS DreamFunctions ForgivingFnct)
+
+add_executable(LALmTSystematics_Update ${PROJECT_SOURCE_DIR}/GetmTSystematicsLAL_Update.C)
+target_link_libraries(LALmTSystematics_Update tidyCATS DreamFunctions ForgivingFnct)
+
 add_executable(LALmTVariations ${PROJECT_SOURCE_DIR}/GetmTVariationsLAL.C)
 target_link_libraries(LALmTVariations tidyCATS DreamFunctions ForgivingFnct)
