[p-D] Get DeltaEtaDeltaPhi distributions as a cross-check

--- a/DreamFunction/CMakeLists.txt
+++ b/DreamFunction/CMakeLists.txt
@@ -143,3 +143,6 @@ target_link_libraries(executeDPhiDEtaAncestors DreamFunctions)
 
 add_executable(executeD ${PROJECT_SOURCE_DIR}/Scripts/ExecuteDmeson.C)
 target_link_libraries(executeD DreamFunctions)
+
+add_executable(executeDDeltaEtaDeltaPhi ${PROJECT_SOURCE_DIR}/Scripts/ExecuteDmesonDeltaEtaDeltaPhi.C)
+target_link_libraries(executeDDeltaEtaDeltaPhi DreamFunctions)
