Add test script for p-phi correlation function - Note that the potential seems not to be properly computed - Needs further debugging

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -247,3 +247,6 @@ target_link_libraries(LednickyPlay tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
 
 add_executable(DmesonPlayground ${PROJECT_SOURCE_DIR}/Scripts/pDmeson/DmesonPlayground.C)
 target_link_libraries(DmesonPlayground tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
+add_executable(pPhiPotentials ${PROJECT_SOURCE_DIR}/Scripts/pPhiPotentials.C)
+target_link_libraries(pPhiPotentials tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
