[p-D] First version of the p-D- fitter o p-D- genuine as Coulomb-only o p-D*- genuine as Coulomb-only o No baseline o p-(Kpipi) background as weighted mean of the sidebands   - Parametrized by Gaussian + pol1   - Better treatment of the fitting and the uncertainties required

--- a/GentleKitty/CMakeLists.txt
+++ b/GentleKitty/CMakeLists.txt
@@ -250,3 +250,6 @@ target_link_libraries(DmesonPlayground tidyCATS -L${DREAM_LIB_PATH} DreamFunctio
 
 add_executable(pPhiPotentials ${PROJECT_SOURCE_DIR}/Scripts/pPhiPotentials.C)
 target_link_libraries(pPhiPotentials tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
+
+add_executable(fitDminus ${PROJECT_SOURCE_DIR}/Scripts/pDmeson/fitDminus.C)
+target_link_libraries(fitDminus tidyCATS -L${DREAM_LIB_PATH} DreamFunctions)
