[p-D] Evaluate syst. uncertainty

--- a/Systematics/CMakeLists.txt
+++ b/Systematics/CMakeLists.txt
@@ -89,3 +89,6 @@ target_link_libraries(LALmTAncestors tidyCATS DreamFunctions ForgivingFnct)
 
 add_executable(pApmTAncestors ${PROJECT_SOURCE_DIR}/GetmTVariationspApAncestors.C)
 target_link_libraries(pApmTAncestors tidyCATS DreamFunctions ForgivingFnct)
+
+add_executable(systematicsD ${PROJECT_SOURCE_DIR}/EvalDmesonSystematics.C)
+target_link_libraries(systematicsD tidyCATS DreamFunctions ForgivingFnct)
